--- a/dubbo-provider/pom.xml
+++ b/dubbo-provider/pom.xml
@@ -142,4 +142,7 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
+    <build>
+        <finalName>dubbo-provider</finalName>
+    </build>
 </project>
