--- a/dubbo-consumer/pom.xml
+++ b/dubbo-consumer/pom.xml
@@ -139,4 +139,7 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
+    <build>
+        <finalName>dubbo-consumer</finalName>
+    </build>
 </project>
